main/config/k8s-manifest/test-alb/2-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: artha
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
  selector:
    app: myapp
